infra/k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webcat-api-service
  namespace: webcat
spec:
  type: NodePort
  selector:
    app: webcat-api
  ports:
    - port: 3333
      targetPort: 3333
      nodePort: 30333
